examples/test/testpolicy721.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy721
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key34: value49
      key16: value12
      key13: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value36
          key7: value45
      podSelector:
        matchLabels:
          key21: value11
